--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   "dependencies": {
     "babel": "^6.5.2",
     "babel-cli": "^6.14.0",
-    "babel-preset-es2015": "^6.14.0"
+    "babel-preset-es2015": "^6.14.0",
+    "sequelize": "^3.24.3",
+    "sqlite3": "^3.1.4"
   },
   "devDependencies": {
     "chai": "^3.5.0",
