--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel": "^6.5.2",
     "babel-cli": "^6.14.0",
     "babel-preset-es2015": "^6.14.0",
+    "body-parser": "^1.15.2",
     "sequelize": "^3.24.3",
     "sqlite3": "^3.1.4"
   },
