--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "babel-node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "test-integration": "mocha --opts test/integration/mocha.opts test/integration/*.js"
+    "test-integration": "mocha --opts test/integration/mocha.opts test/integration/*.js",
+    "lint": "eslint '**/*.js'",
+    "lint:fix": "eslint '**/*.js' --fix"
   },
   "repository": {
     "type": "git",
@@ -28,11 +30,17 @@
     "babel-cli": "^6.14.0",
     "babel-preset-es2015": "^6.14.0",
     "body-parser": "^1.15.2",
+    "express": "^4.14.0",
     "sequelize": "^3.24.3",
     "sqlite3": "^3.1.4"
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "eslint": "^3.5.0",
+    "eslint-config-airbnb": "^11.1.0",
+    "eslint-plugin-import": "^1.15.0",
+    "eslint-plugin-jsx-a11y": "^2.2.2",
+    "eslint-plugin-react": "^6.3.0",
     "mocha": "^3.0.2",
     "supertest": "^2.0.0"
   }
