Configurando para criar o banco de acordo com o ambiente.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
         "expect": true,
         "app": true,
         "beforeEach": true,
-        "request": true
+        "request": true,
+        "td": true
     }
 }
