--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,8 @@
         "app": true,
         "beforeEach": true,
         "request": true,
-        "td": true
+        "td": true,
+        "Joi": true,
+        "joiAssert": true
     }
 }
