--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "http-status": "^0.2.3",
+    "jwt-simple": "^0.5.0",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.1.0",
     "sequelize": "^3.24.3",
     "sqlite3": "^3.1.4"
   },
